@@ -5,7 +5,7 @@
 PKG_NAME="docker"
 PKG_VERSION="18.09.7"
 PKG_SHA256="f05dc15f5c11635472534c3aaf759c39c1bba842dd1ac23059431c2fd1ae1795"
-PKG_REV="127"
+PKG_REV="128"
 PKG_ARCH="any"
 PKG_LICENSE="ASL"
 PKG_SITE="http://www.docker.com/"
